01-march-2010 - adelikat - win32 - a disable movie messages menu item
25-feb-2010 - prockguy - unix netplay is now functional; gtk network gui created
24-feb-2010 - prockguy - GTK - added basic movie controls
24-feb-2010 - prockguy - GTK - added file filters; added Load FDS function
24-feb-2010 - prockguy - GTK - added palette config dialog
23-feb-2010 - prockguy - GTK - added UI elemnts for x/y scale; added lowpass UI option
23-feb-2010 - prockguy - GTK - added GUI for color/tint/hue
23-feb-2010 - prockguy - GTK - implemented sound mixer dialog (for square1, 2, triangle, etc)
22-feb-2010 - prockguy - SDL - ported to SDL 1.3; compatibility maintained with 1.2
18-feb-2010 - prockguy - GTK - a lot of options added to GTK gui; relatively stable; added GUI for gamepad config and sound config.  
02-feb-2010 - ugetab - Win32 - Added window positions bounds checks. Accounts for -32000 positions & less out-of-range too
08-jan-2010 - rheiny - Win32 - Trace Logger - Trace logger now logs the values of the stack pointer register
31-dec-2009 - prg318 - added gtk gui
08-dec-2009 - Zeromus - Fix Name Table Viewer - Fix for use with New PPU
08-dec-2009 - - mart0258 - FDS - show name of missing bios file in error message
07-dec-2009 - qeed - NewPPU - fixed sprite hit before 255 and for non transparent hits only, thanks to dwedit for providing the fix
06-dec-2009 - Zeromus - SDL - disallow --inputcfg gamepad0 and gamepad5
??-???-2009 - CaH4e3 - fixed mappers 82, 25, 21, and 18.  Games such as SD Kiji Blader, Ganbare Goemon Gaiden, and Ganbare Goemon Gaiden 2, Jajamaru Gekimadden are now playable
17-nov-2009 - adelikat - Win32 - Cheats - Pause while active checkbox installed
17-nov-2009 - adelikat - Win32 - Fix debug window so it doesn't crash if unminimized with no game loaded.
13-nov-2009 - mart0258 - Win32 - TASEdit - Added interface functionality (save/load, running TASEdit mid-movie, etc.)
13-nov-2009 - adelikat - made savestate compression togglable